# ECCS4461-Optimize

./: README.md  brute.py  data.csv  genetic.py  mixed.py  pyproject.toml
